// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Circle should render 1`] = `
<div>
  <div
    class="Circle__CircleWrapper-sc-d5u41q-0 egCVFn ring-theme-background"
  />
</div>
`;

exports[`Circle should render as avatar 1`] = `
<div>
  <div
    class="Circle__CircleWrapper-sc-d5u41q-0 XFyQu ring-theme-background"
  />
</div>
`;

exports[`Circle should render as blank 1`] = `
<div>
  <div
    class="Circle__CircleWrapper-sc-d5u41q-0 egCVFn ring-theme-background"
  />
</div>
`;

exports[`Circle should render extra-large 1`] = `
<div>
  <div
    class="Circle__CircleWrapper-sc-d5u41q-0 jgWpkc ring-theme-background"
  />
</div>
`;

exports[`Circle should render large 1`] = `
<div>
  <div
    class="Circle__CircleWrapper-sc-d5u41q-0 cFnCcb ring-theme-background"
  />
</div>
`;

exports[`Circle should render small 1`] = `
<div>
  <div
    class="Circle__CircleWrapper-sc-d5u41q-0 hvLSoA ring-theme-background"
  />
</div>
`;

exports[`Circle should render with content 1`] = `
<div>
  <div
    class="Circle__CircleWrapper-sc-d5u41q-0 hvLSoA ring-theme-background"
  >
    <div
      data-testid="circle__content"
    />
  </div>
</div>
`;

exports[`Circle should render with no shadow 1`] = `
<div>
  <div
    class="Circle__CircleWrapper-sc-d5u41q-0 cPUFYC ring-theme-background"
  />
</div>
`;
